--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="shortcut icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="base.css">
   <title>Sokoban</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
 
-    body {
-      font-family: sans-serif;
-      display: flex;
-      justify-content: center;
-    }
   </style>
 </head>
 
