feat: move everything over to create-react-app

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="MyFontsWebfontsKit.css">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>Sokoban</title>
   <style>
-
+    body {
+      font-family: san-serif;
+    }
   </style>
 </head>
 
 <body>
   <div id="root">Loading Sokoban...</div>
-
-  <script src='app.min.js'></script>
 </body>
 
 </html>
