feat: font stuff

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>Sokoban</title>
-  <style>
-    body {
-      font-family: san-serif;
-    }
-  </style>
 </head>
 
 <body>
+  <style>
+    body {
+      font-family: Cartwheel, san-serif;
+    }
+  </style>
   <div id="root">Loading Sokoban...</div>
 </body>
 
