--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
       background: #ddd;
       font-family: Cartwheel, san-serif;
     }
+    
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
   </style>
   <div id="root">Loading Sokoban...</div>
 </body>
