--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,19 @@
       margin: 0;
       padding: 0;
     }
+
+    .initial-load {
+      position: fixed;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   </style>
-  <div id="root">Loading Sokoban...</div>
+  <div id="root">
+    <div class="initial-load">Loading...</div>
+  </div>
 </body>
 
 </html>
