--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="theme-color" content="steelblue">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>Sokoban</title>
 </head>
